--- a/src/css/themes.css
+++ b/src/css/themes.css
@@ -117,7 +117,7 @@
 
         --actioncard-action-c: cornflowerblue;
         --actioncard-reaction-c: coral;
-        --actioncard-skill-icon-c: darkolivegreen;
+        --actioncard-skill-icon-c: lightgreen;
 
         /* Box */
 
