more layout tinkering

--- a/src/css/themes.css
+++ b/src/css/themes.css
@@ -83,7 +83,7 @@ html.light {
     --striped-table-odd-c: whitesmoke;
     --table-head-background-c: aliceblue;
     --delete-icon-c: darkred;
-    --highlight-c: lightgreen;
+    --highlight-c: cornflowerblue;
 
     --font-weight: 400;
     --font-weight-bold: 700;
@@ -169,7 +169,7 @@ html.dark {
     --striped-table-odd-c: #1c1c1c;
     --table-head-background-c: saddlebrown;
     --delete-icon-c: orangered;
-    --highlight-c: mediumseagreen;
+    --highlight-c: steelblue;
 
     --font-weight: 350;
     --font-weight-bold: 500;
@@ -257,7 +257,7 @@ html.dark {
         --striped-table-odd-c: #1c1c1c;
         --table-head-background-c: saddlebrown;
         --delete-icon-c: orangered;
-        --highlight-c: darkolivegreen;
+        --highlight-c: steelblue;
 
         --font-weight: 350;
         --font-weight-bold: 500;
